# form-check

./: .gitignore  DOCKER.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: backend.yml  frontend.yml  integration.yml
backend/: .coverage  .dockerignore  .env.example  Dockerfile  README.md  coverage.xml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  test_precommit.py
backend/app/: config.py  main.py
backend/app/features/form_analysis/: prompts.py  router.py  schemas.py
backend/app/models/: schemas.py
backend/app/routers/: form_analysis.py
backend/app/services/: claude_service.py
backend/app/shared/: claude_client.py
backend/tests/: README.md  __init__.py  conftest.py  test_main.py
backend/tests/features/: __init__.py
backend/tests/features/form_analysis/: __init__.py  test_prompts.py  test_router.py  test_schemas.py
backend/tests/shared/: test_claude_client.py
frontend/: .dockerignore  .prettierignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  test-prettier.js  tsconfig.json  vite.config.js
frontend/src/: App.jsx  App.tsx  index.css
frontend/src/components/: AppHeader.jsx  AppHeader.tsx  FormResults.jsx  FormResults.tsx  VideoPreview.jsx  VideoPreview.tsx  VideoUploadTips.jsx  VideoUploader.jsx
frontend/src/features/form-check/: FormCheckView.tsx
frontend/src/features/form-check/components/: FormResults.tsx  VideoUploadTips.tsx  VideoUploader.tsx
frontend/src/features/form-check/utils/: poseDetection.ts
frontend/src/features/video-analysis/: VideoAnalysisView.test.tsx  VideoAnalysisView.tsx
frontend/src/features/video-analysis/components/: VideoPreview.test.tsx  VideoPreview.tsx  VideoResults.tsx  VideoUploadTips.tsx  VideoUploader.test.tsx  VideoUploader.tsx
frontend/src/features/video-analysis/utils/: poseDetection.test.ts  poseDetection.ts  poseDetection.types.ts  urlSanitizer.test.ts  urlSanitizer.ts
frontend/src/utils/: poseDetection.js  poseDetection.ts  poseDetection.types.ts  videoProcessing.js  videoProcessing.ts
src/: App.jsx  index.css
src/components/: AnalysisResults.jsx  LoadingSpinner.jsx  VideoPreview.jsx  VideoUploadTips.jsx  VideoUploader.jsx
src/utils/: videoProcessing.js
